--- a/normal_mode/sprite.css
+++ b/normal_mode/sprite.css
@@ -1,2 +1,6 @@
 .blog, .news { background-image: url(/sprite.png); }
 .blog { background-position: 0px 0px }
+.news { background-position: -180px 0px }
+
+
+ hogehoge 060
